[gd_scene load_steps=5 format=1]

[ext_resource path="res://Scripts/GameOver.gd" type="Script" id=1]
[ext_resource path="res://Sprites/star.png" type="Texture" id=2]
[ext_resource path="res://Sprites/home1.png" type="Texture" id=3]
[ext_resource path="res://Sprites/home2.png" type="Texture" id=4]

[node name="GameOver" type="Node2D"]

script/script = ExtResource( 1 )

[node name="background" type="Sprite" parent="."]

[node name="Estrela1" type="Sprite" parent="."]

transform/pos = Vector2( 358.747, 134.153 )
texture = ExtResource( 2 )

[node name="Estrela2" type="Sprite" parent="."]

transform/pos = Vector2( 489.886, 79.889 )
texture = ExtResource( 2 )

[node name="Estrela3" type="Sprite" parent="."]

transform/pos = Vector2( 619.517, 129.631 )
texture = ExtResource( 2 )

[node name="BotaoHome" type="TextureButton" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 440.0
margin/top = 433.0
margin/right = 565.0
margin/bottom = 558.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 3 )
textures/pressed = ExtResource( 4 )
params/resize_mode = 0
params/scale = Vector2( 0.8, 0.8 )
params/stretch_mode = 0

[node name="Pontuacao" type="Label" parent="."]

rect/scale = Vector2( 3, 3 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 106.0
margin/top = 329.0
margin/right = 367.0
margin/bottom = 345.0
text = "Você conseguiu proteger 99% da floresta"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Parabens" type="Label" parent="."]

rect/scale = Vector2( 3, 3 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 386.0
margin/top = 238.0
margin/right = 445.0
margin/bottom = 252.0
text = "Parabéns!!!"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[connection signal="pressed" from="BotaoHome" to="." method="_on_BotaoHome_pressed"]


